Added the data interaction basis - context, entity and repositories classes; some of the classes from core class libs were renamed

--- a/Structured Cabling Studio/Structured Cabling Studio.csproj
+++ b/Structured Cabling Studio/Structured Cabling Studio.csproj
@@ -7,4 +7,14 @@
     <RootNamespace>StructuredCablingStudio</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StructuredCablingStudioCore.Calculation\StructuredCablingStudioCore.Calculation.csproj" />
+    <ProjectReference Include="..\StructuredCablingStudioCore.Parameters\StructuredCablingStudioCore.Parameters.csproj" />
+    <ProjectReference Include="..\StructuredCablingStudioCore\StructuredCablingStudioCore.csproj" />
+  </ItemGroup>
+
 </Project>
