--- a/Structured Cabling Studio/appsettings.json
+++ b/Structured Cabling Studio/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CablingConfigurationsDB": "Data Source=cabling_configurations.db"
+  }
 }
