Added custom selectors js library; master-page markup was chenged

--- a/Structured Cabling Studio/Structured Cabling Studio.csproj
+++ b/Structured Cabling Studio/Structured Cabling Studio.csproj
@@ -8,6 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\customSelectors.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\customSelectors.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\customSelectors.js" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.rtl.css.map" />
