The DBMS was changed from SQLite to MS SQLServer; the data interaction model was edited - added identity

--- a/Structured Cabling Studio/appsettings.json
+++ b/Structured Cabling Studio/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CablingConfigurationsDB": "Data Source=cabling_configurations.db"
+    "CablingConfigurationsDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ConfigurationsDB;Integrated Security=True;Trust Server Certificate=True;"
   }
 }
