--- a/Structured Cabling Studio/Structured Cabling Studio.csproj
+++ b/Structured Cabling Studio/Structured Cabling Studio.csproj
@@ -48,7 +48,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
