--- a/Structured Cabling Studio/Structured Cabling Studio.csproj
+++ b/Structured Cabling Studio/Structured Cabling Studio.csproj
@@ -58,6 +58,9 @@
     <EmbeddedResource Update="Resources\Controllers\Calculation.ru.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Views\Calculation\_ConfigurationDisplayPartial.ru.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\Views\Calculation\_CalculateFormPartial.ru.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
