Added the Configurations controller

--- a/Structured Cabling Studio/Structured Cabling Studio.csproj
+++ b/Structured Cabling Studio/Structured Cabling Studio.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Resources\Views\Calculation\_ConfigurationsListPartial.ru.resx">
+    <EmbeddedResource Update="Resources\Views\Configurations\_ConfigurationsListPartial.ru.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\Views\Calculation\History.ru.resx">
