The connection string was moved to local storage

--- a/Structured Cabling Studio/appsettings.json
+++ b/Structured Cabling Studio/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CablingConfigurationsDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ConfigurationsDB;Integrated Security=True;Trust Server Certificate=True;"
-  }
+  "AllowedHosts": "*"
 }
